previous fix, created whiteline on mobile view.  changes reverted  need to research further

--- a/server/public/style.css
+++ b/server/public/style.css
@@ -3,8 +3,9 @@ body{
 }
 
 .container{
+  background-color: black;
   background-image: url(./images/background-image.png);
-  background-size: auto;
+  background-size: cover;
   overflow: auto;
   padding-bottom: 2px;
   background-repeat: repeat;
